# Hackathon-_II

phase-II/: .gitignore  README.md  (+10 more)
phase-II/backend/: .env.example  HACKATHON_FEATURES.md  README.md  auth.py  better_auth_config.py  create_tables.py  db.py  debug_update.py  debug_users.py  demo.py  fix_jwks.py  init_db.py  main.py  models.py  pyproject.toml  quick_demo.py  requirements.txt  schemas.py  test_auth_flow.py  test_enhanced_ui.py  test_multiple_tasks.py  test_new_commands.py  test_update_fix.py
phase-II/backend/.specify/memory/: constitution.md
phase-II/backend/api/: index.py
phase-II/backend/history/prompts/constitution/: 1-create-initial-constitution.constitution.prompt.md
phase-II/backend/history/prompts/todo-features/: 2-create-todo-features-spec.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-create-implementation-tasks.tasks.prompt.md  5-complete-implementation.tasks.prompt.md
phase-II/backend/routers/: tasks.py
phase-II/backend/specs/1-todo-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-II/backend/specs/1-todo-features/checklists/: requirements.md
phase-II/backend/src/: main.py
phase-II/backend/src/models/: task.py
phase-II/backend/src/phase1_todo_app/: __init__.py
phase-II/backend/src/services/: repository.py  task_service.py
phase-II/backend/src/ui/: cli.py
phase-II/backend/tests/unit/: test_todo_app.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/: .env  .env.example  .gitignore  README.md  RUN_COMMANDS.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml
phase-III/todo-ai-chatbot/todo-ai-chatbot/backend/: requirements.txt
phase-III/todo-ai-chatbot/todo-ai-chatbot/config/: __init__.py  settings.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/database/: __init__.py  database.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/frontend/: README.md  next.config.js  package.json  tsconfig.json
phase-III/todo-ai-chatbot/todo-ai-chatbot/mcp_servers/: main.py  requirements.txt
phase-III/todo-ai-chatbot/todo-ai-chatbot/models/: __init__.py  conversation.py  message.py  task.py  user.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/routes/: __init__.py  auth_routes.py  chat_routes.py  nlp_routes.py  todo_routes.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/schemas/: __init__.py  chat.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/services/: __init__.py  agent_service.py  chat_service.py
phase-III/todo-ai-chatbot/todo-ai-chatbot/specs/: phase-iii-design.md  phase-iii-todo-ai-chatbot-tasks.md
(+107 files in other folders)
