[project]
name = "phase1-todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laiba Khan", email = "codewithlaiba28@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
phase1-todo-app = "phase1_todo_app:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
