[project]
name = "phase1-todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laiba Khan", email = "codewithlaiba28@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
phase1-todo-app = "phase1_todo_app:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
